--- a/BolsaDeValores/res/drawable/back_border.xml
+++ b/BolsaDeValores/res/drawable/back_border.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#00f" />
+    <solid android:color="#4761D5" />
 
     <corners android:radius="4dip" />
 
