--- a/BolsaDeValores/res/drawable/item_back_border.xml
+++ b/BolsaDeValores/res/drawable/item_back_border.xml
@@ -1,8 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#0f0" />
-
-    <corners android:topRightRadius="2dip" />
+    <corners android:topRightRadius="3dp" />
     
 </shape>
