--- a/BolsaDeValores/res/menu/details.xml
+++ b/BolsaDeValores/res/menu/details.xml
@@ -10,6 +10,10 @@
         android:title="Stock"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
     <item
+        android:id="@+id/menu_currency"
+        android:title="Currency"
+        com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
+    <item
         android:id="@+id/menu_search"
         android:title="Busca"
         com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
