Trocando a ordem dos menus.

--- a/BolsaDeValores/res/menu/stock.xml
+++ b/BolsaDeValores/res/menu/stock.xml
@@ -2,6 +2,12 @@
     xmlns:com.example.bolsadevalores="http://schemas.android.com/apk/res-auto" >
 
     <item
+        android:id="@+id/menu_search"
+        android:title="Busca"
+        android:icon="@android:drawable/ic_search_category_default"
+        com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
+        com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
+    <item
         android:id="@+id/menu_feeds"
         android:title="Feeds"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
@@ -9,9 +15,4 @@
         android:id="@+id/menu_currency"
         android:title="Currency"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
-    <item
-        android:id="@+id/menu_search"
-        android:title="Busca"
-        com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
-        com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
 </menu>
