Progress dialog bonitinho.

--- a/BolsaDeValores/res/layout/activity_details.xml
+++ b/BolsaDeValores/res/layout/activity_details.xml
@@ -69,5 +69,7 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
+    
+    <include layout="@layout/progress"/>
 
 </RelativeLayout>
