--- a/BolsaDeValores/res/layout/activity_search_stock.xml
+++ b/BolsaDeValores/res/layout/activity_search_stock.xml
@@ -6,5 +6,7 @@
         android:id="@+id/search_result"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+    
+    <include layout="@layout/progress"/>
 
 </RelativeLayout>
