--- a/BolsaDeValores/res/menu/details.xml
+++ b/BolsaDeValores/res/menu/details.xml
@@ -4,11 +4,13 @@
     <item
         android:id="@+id/menu_search"
         android:title="Busca"
+        android:icon="@android:drawable/ic_search_category_default"
         com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
         com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/menu_feeds"
         android:title="Feeds"
+        android:icon="@drawable/ic_rss"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
     <item
         android:id="@+id/menu_currency"
