--- a/BolsaDeValores/res/menu/currency.xml
+++ b/BolsaDeValores/res/menu/currency.xml
@@ -3,13 +3,13 @@
 
     <item
         android:id="@+id/menu_search"
-        android:title="Busca"
+        android:title="@string/menu_search"
         android:icon="@android:drawable/ic_search_category_default"	
         com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
         com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/menu_feeds"
-        android:title="Feeds"
+        android:title="@string/menu_feeds"
         android:icon="@drawable/ic_rss"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
 </menu>
