--- a/BolsaDeValores/res/menu/stock.xml
+++ b/BolsaDeValores/res/menu/stock.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/menu_search"
-        android:title="Busca"
+        android:title="@string/menu_search"
         android:icon="@android:drawable/ic_search_category_default"
         com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
         com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
     <item
         android:id="@+id/menu_feeds"
         android:icon="@drawable/ic_rss"
-        android:title="Feeds"
+        android:title="@string/menu_feeds"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
     <item
         android:id="@+id/menu_currency"
-        android:title="Currency"
+        android:title="@string/menu_currency"
         com.example.bolsadevalores:showAsAction="ifRoom"/>
 </menu>
