--- a/BolsaDeValores/res/layout/activity_details.xml
+++ b/BolsaDeValores/res/layout/activity_details.xml
@@ -24,10 +24,13 @@
         </TableRow>
 
         <TableRow
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -35,16 +38,20 @@
 
             <TextView
                 android:id="@+id/details_updated_at"
+                android:textStyle="bold"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </TableRow>
 
         <TableRow
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -52,22 +59,27 @@
 
             <TextView
                 android:id="@+id/details_day"
+                android:textStyle="bold"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </TableRow>
 
         <TableRow
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Último:" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/details_recent"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
@@ -75,16 +87,20 @@
         </TableRow>
 
         <TableRow
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Fechamento anterior:" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/details_previous_close"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
@@ -92,16 +108,20 @@
         </TableRow>
 
         <TableRow
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:text="Abertura:" />
 
             <TextView
+                android:textStyle="bold"
                 android:id="@+id/details_open"
                 android:gravity="center_horizontal"
                 android:layout_width="match_parent"
