--- a/BolsaDeValores/res/menu/stock_context.xml
+++ b/BolsaDeValores/res/menu/stock_context.xml
@@ -3,6 +3,6 @@
 
     <item
         android:id="@+id/stock_context_remove"
-        android:title="Remover"
+        android:title="@string/context_stock_delete"
         android:icon="@android:drawable/ic_menu_delete"/>
 </menu>
