Iniciando context action bar para favoritar acoes.

--- a/BolsaDeValores/res/layout/activity_search_stock.xml
+++ b/BolsaDeValores/res/layout/activity_search_stock.xml
@@ -5,7 +5,8 @@
     <ListView
         android:id="@+id/search_result"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:choiceMode="multipleChoice"/>
     
     <include layout="@layout/progress"/>
 
