Melhorando icone de trash.

--- a/BolsaDeValores/res/menu/stock_context.xml
+++ b/BolsaDeValores/res/menu/stock_context.xml
@@ -4,5 +4,5 @@
     <item
         android:id="@+id/stock_context_remove"
         android:title="@string/context_stock_delete"
-        android:icon="@android:drawable/ic_menu_delete"/>
+        android:icon="@drawable/ic_trash"/>
 </menu>
