--- a/BolsaDeValores/res/menu/currency.xml
+++ b/BolsaDeValores/res/menu/currency.xml
@@ -3,8 +3,8 @@
 
     <item
         android:id="@+id/menu_search"
-        android:title="@string/menu_search"
-        android:icon="@android:drawable/ic_search_category_default"	
+        android:title="@string/menu_currency_search"
+        android:icon="@drawable/ic_currency_search"	
         com.example.bolsadevalores:actionViewClass="android.support.v7.widget.SearchView"
         com.example.bolsadevalores:showAsAction="ifRoom|collapseActionView"/>
     <item
