--- a/BolsaDeValores/res/layout/activity_feed.xml
+++ b/BolsaDeValores/res/layout/activity_feed.xml
@@ -2,10 +2,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <FrameLayout
-        android:id="@+id/feed_fragment"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/feed_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-    </FrameLayout>
+    </android.support.v4.view.ViewPager>
     
 </LinearLayout>
