--- a/BolsaDeValores/res/layout/activity_feed_market.xml
+++ b/BolsaDeValores/res/layout/activity_feed_market.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent" >
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/feed_pager"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </android.support.v4.view.ViewPager>
