--- a/BolsaDeValores/res/layout/fragment_currency.xml
+++ b/BolsaDeValores/res/layout/fragment_currency.xml
@@ -5,8 +5,7 @@
     <ListView
         android:id="@+id/currency_list" 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@android:color/transparent"/>
+        android:layout_height="match_parent"/>
     
     <include layout="@layout/progress"/>
 
