--- a/BolsaDeValores/res/layout/activity_details.xml
+++ b/BolsaDeValores/res/layout/activity_details.xml
@@ -138,6 +138,19 @@
                 android:layout_height="wrap_content" 
                 android:textColor="#fff"/>
         </TableRow>
+        
+        <TableRow 
+            android:padding="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" 
+            android:layout_weight="1">
+            <WebView 
+                android:layout_span="2"
+                android:id="@+id/details_chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </TableRow>
     </TableLayout>
 
     <include layout="@layout/progress" />
